--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 </head>
 <body>
 <!--Beginning Animation-->
-<div class="beg-animation"></div>
+<div class="beg-animation">
+    <p id="GC-1">ROOMS.</p>
+    <p id="GC-2">SUITES.</p>
+    <p id="GC-3">CUISINES.</p>
+    <img src="Assets/GC-4.png" alt="" id="GC-4">
+</div>
 
 <!--Navigation Section-->
 <div class="nav-panel">
@@ -144,9 +149,12 @@
     <div class="about">
         <h1 class="head">Luncheon and Suite</h1>
         <p>Welcome to our hôtel de luxe!</p>
-        <p>We provide cozy rooms that you can use as your private space. The view that you will around will bring happiness on your face.</p>
-        <p>We have on of the best cuisines. We bet that you gonna love them. Grab your friends and create some memories.</p>
-        <p>Whether it's a day or night, we have something for you every time. Whether you spend your time alone at the bar or wanna enjoy bonfire, we can arrange it all.</p>
+        <p>We provide cozy rooms that you can use as your private space. The view that you will around will bring
+            happiness on your face.</p>
+        <p>We have on of the best cuisines. We bet that you gonna love them. Grab your friends and create some
+            memories.</p>
+        <p>Whether it's a day or night, we have something for you every time. Whether you spend your time alone at the
+            bar or wanna enjoy bonfire, we can arrange it all.</p>
         <p>We are happy to serve.</p>
     </div>
     <div class="banner-2"></div>
@@ -177,10 +185,9 @@
                     <div class="row-2">
                         <div class="col-2">
                             <div class="row">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at autem beatae
-                                    commodi consectetur consequuntur deleniti dolore eaque est et excepturi
-                                    exercitationem fugiat illum inventore iure labore magni maiores officiis quae quasi,
-                                    qui quis rem tempore tenetur ullam veniam voluptatibus?</p>
+                                <p>"When you get into a hotel room, you lock the door, and you know there is a secrecy,
+                                    there is a luxury, there is fantasy. There is comfort. There is reassurance."</p>
+                                <p>-Diane von Furstenberg</p>
                             </div>
                         </div>
                         <div class="col-10">
@@ -251,10 +258,9 @@
                     <div class="row-2">
                         <div class="col-2">
                             <div class="row">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at autem beatae
-                                    commodi consectetur consequuntur deleniti dolore eaque est et excepturi
-                                    exercitationem fugiat illum inventore iure labore magni maiores officiis quae quasi,
-                                    qui quis rem tempore tenetur ullam veniam voluptatibus?</p>
+                                <p>I've traveled all the way around the world; I've been to over 95 countries, so I love
+                                    ethnic food, different types of cuisine.</p>
+                                <p>-Larry Fitzgerald</p>
                             </div>
                         </div>
                         <div class="col-10">
@@ -326,10 +332,10 @@
                     <div class="row-2">
                         <div class="col-2">
                             <div class="row">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at autem beatae
-                                    commodi consectetur consequuntur deleniti dolore eaque est et excepturi
-                                    exercitationem fugiat illum inventore iure labore magni maiores officiis quae quasi,
-                                    qui quis rem tempore tenetur ullam veniam voluptatibus?</p>
+                                <p>Rejoicing in our joy, not suffering over our suffering, makes someone a friend.</p>
+                                <p>-Friedrich Nietzsche
+
+                                </p>
                             </div>
                         </div>
                         <div class="col-10">
@@ -400,10 +406,9 @@
                     <div class="row-2">
                         <div class="col-2">
                             <div class="row">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam at autem beatae
-                                    commodi consectetur consequuntur deleniti dolore eaque est et excepturi
-                                    exercitationem fugiat illum inventore iure labore magni maiores officiis quae quasi,
-                                    qui quis rem tempore tenetur ullam veniam voluptatibus?</p>
+                                <p>And the idea of just wandering off to a cafe with a notebook and writing and seeing
+                                    where that takes me for awhile is just bliss.</p>
+                                <p>-J. K. Rowling</p>
                             </div>
                         </div>
                         <div class="col-10">
