--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="Assets/style.css">
     <link rel="stylesheet" href="Assets/responsive.css">
+    <link rel="stylesheet" href="Assets/animations.css">
     <title>Déjeuner</title>
+    <script src="Assets/script.js"></script>
 </head>
-<body>
+<body onload="scrollNav()">
 <!--Beginning Animation-->
-<div class="beg-animation">
+<div id="beg-animation">
     <p id="GC-1">ROOMS.</p>
     <p id="GC-2">SUITES.</p>
     <p id="GC-3">CUISINES.</p>
@@ -19,12 +21,12 @@
 </div>
 
 <!--Navigation Section-->
-<div class="nav-panel">
+<div class="nav-panel" id="panel-1">
     <div class="row">
         <div class="col">
             <h1>Our Best Services</h1>
         </div>
-        <div class="col">
+        <div class="col" onclick="hideNavPanel('panel-1')">
             <a href="#">
                 <div class="drop">
                     <div class="line-1"></div>
@@ -90,10 +92,10 @@
 
     </div>
 </div>
-<nav>
+<nav id="side-nav">
     <div class="row">
         <div class="col">
-            <div class="burger">
+            <div class="burger" onclick="showNavPanel('panel-1')">
                 <div class="line" id="line4"></div>
                 <div class="line" id="line5"></div>
                 <div class="line" id="line6"></div>
@@ -116,7 +118,7 @@
 
 
 <!--Main Container-->
-<div class="container-fluid">
+<div class="container-fluid" id="container">
     <!--Banner Section-->
     <div class="banner-small">
         <ul>
@@ -137,7 +139,7 @@
         <div class="nav">
             <div class="row">
                 <button>Book Now</button>
-                <div class="burger">
+                <div class="burger" onclick="showNavPanel('panel-1')">
                     <div class="line" id="line1"></div>
                     <div class="line" id="line2"></div>
                     <div class="line" id="line3"></div>
@@ -168,12 +170,12 @@
         <!--Sub-Content Section-->
         <div class="content">
             <div class="row">
-                <div class="content-panel">
+                <div class="content-panel" id="d-panel-1">
                     <div class="row-1">
                         <div class="col">
                             <h1>Rooms &amp; Suites</h1>
                         </div>
-                        <div class="col">
+                        <div class="col" onclick="hidePanel('d-panel-1')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -225,7 +227,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" onclick="showPanel('d-panel-1')">
 
                     <div class="card">
                         <div class="card-img">
@@ -241,12 +243,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="content-panel">
+                <div class="content-panel" id="d-panel-2">
                     <div class="row-1">
                         <div class="col">
                             <h1>Gourmet Experiences</h1>
                         </div>
-                        <div class="col">
+                        <div class="col" onclick="hidePanel('d-panel-2')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -298,7 +300,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" onclick="showPanel('d-panel-2')">
                     <div class="card">
                         <div class="card-img">
                             <img src="Assets/gourmet.jpg" alt="">
@@ -315,12 +317,12 @@
             </div>
 
             <div class="row">
-                <div class="content-panel">
+                <div class="content-panel" id="d-panel-3">
                     <div class="row-1">
                         <div class="col">
                             <h1>Days &amp; Nights</h1>
                         </div>
-                        <div class="col">
+                        <div class="col" onclick="hidePanel('d-panel-3')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -373,7 +375,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" onclick="showPanel('d-panel-3')">
                     <div class="card">
                         <div class="card-img">
                             <img src="Assets/days.jpg" alt="">
@@ -389,12 +391,12 @@
                 </div>
             </div>
             <div class="row">
-                <div class="content-panel">
+                <div class="content-panel" id="d-panel-4">
                     <div class="row-1">
                         <div class="col">
                             <h1>Facilities &amp; Services</h1>
                         </div>
-                        <div class="col">
+                        <div class="col" onclick="hidePanel('d-panel-4')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -446,7 +448,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col" onclick="showPanel('d-panel-4')">
                     <div class="card">
                         <div class="card-img">
                             <img src="Assets/facilities.jpg" alt="">
@@ -494,5 +496,6 @@
         <h3>Designed and Maintained by <a href="https://github.com/Nick-Rj">Nikhil Raj</a></h3>
     </footer>
 </div>
+
 </body>
 </html>
