--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                         <div class="col">
                             <h1>Rooms &amp; Suites</h1>
                         </div>
-                        <div class="col" onclick="hidePanel('d-panel-1')">
+                        <div class="col" onclick="hidePanel('d-panel-1','card-1')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -227,9 +227,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" onclick="showPanel('d-panel-1')">
+                <div class="col" onclick="showPanel('d-panel-1','card-1')">
 
-                    <div class="card">
+                    <div class="card" id="card-1">
                         <div class="card-img">
                             <img src="Assets/room.jpg" alt="">
                         </div>
@@ -248,7 +248,7 @@
                         <div class="col">
                             <h1>Gourmet Experiences</h1>
                         </div>
-                        <div class="col" onclick="hidePanel('d-panel-2')">
+                        <div class="col" onclick="hidePanel('d-panel-2','card-2')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -300,8 +300,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" onclick="showPanel('d-panel-2')">
-                    <div class="card">
+                <div class="col" onclick="showPanel('d-panel-2','card-2')">
+                    <div class="card" id="card-2">
                         <div class="card-img">
                             <img src="Assets/gourmet.jpg" alt="">
                         </div>
@@ -322,7 +322,7 @@
                         <div class="col">
                             <h1>Days &amp; Nights</h1>
                         </div>
-                        <div class="col" onclick="hidePanel('d-panel-3')">
+                        <div class="col" onclick="hidePanel('d-panel-3','card-3')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -375,8 +375,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" onclick="showPanel('d-panel-3')">
-                    <div class="card">
+                <div class="col" onclick="showPanel('d-panel-3','card-3')">
+                    <div class="card" id="card-3">
                         <div class="card-img">
                             <img src="Assets/days.jpg" alt="">
                         </div>
@@ -396,7 +396,7 @@
                         <div class="col">
                             <h1>Facilities &amp; Services</h1>
                         </div>
-                        <div class="col" onclick="hidePanel('d-panel-4')">
+                        <div class="col" onclick="hidePanel('d-panel-4','card-4')">
                             <a href="#">
                                 <div class="drop">
                                     <div class="line-1"></div>
@@ -448,8 +448,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col" onclick="showPanel('d-panel-4')">
-                    <div class="card">
+                <div class="col" onclick="showPanel('d-panel-4','card-4')">
+                    <div class="card" id="card-4">
                         <div class="card-img">
                             <img src="Assets/facilities.jpg" alt="">
                         </div>
